updated responsiveness for mobile devices

--- a/scripts/audio_player/css/audioplayer.css
+++ b/scripts/audio_player/css/audioplayer.css
@@ -228,4 +228,14 @@
   .audioplayer-volume-adjust {
     display: none;
   }
+  .audioplayer-playpause {
+    width: 35px;
+    height: 35px;
+  }
+}
+@media screen and (max-width: 420px) {
+  .audioplayer-playpause {
+    width: 28px;
+    height: 28px;
+  }
 }/*# sourceMappingURL=audioplayer.css.map */
