--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -50,6 +50,13 @@
   color: #D3D9D4;
   font-family: mono;
 }
+.contentframe .description a {
+  color: #94b6bd;
+  text-decoration: none;
+}
+.contentframe .description a:hover {
+  color: #748D92;
+}
 .contentframe img {
   display: flex;
   width: 40vw;
