added hover color for contact info

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -376,6 +376,9 @@
   font-size: 1em;
   text-decoration: none;
 }
+.contactcontainer .contactfooter .container a:hover {
+  color: #748D92;
+}
 
 @media only screen and (max-height: 520px) {
   .firstfill {
