--- a/owenbryce/stylesheets/style.css
+++ b/owenbryce/stylesheets/style.css
@@ -232,11 +232,34 @@ section .content-wrapper .falling-image {
     flex-direction: column;
     justify-content: center;
   }
-  .content-column {
+  section .content-wrapper .content-column {
+    margin: 1rem !important;
     align-items: center !important;
   }
+  h1 {
+    font-size: 4rem;
+    line-height: 0.8em;
+    margin: 0;
+  }
   h2 {
-    font-size: 2.5rem;
-    line-height: 2.2rem;
+    font-size: 2.2rem;
+    line-height: 1.8rem;
+    margin: 0;
+  }
+  h3 {
+    font-size: 2.8rem !important;
+  }
+  h4 {
+    font-size: 1.6rem;
+    line-height: 2.4rem !important;
+  }
+  h5 {
+    font-size: 1rem;
+  }
+  i {
+    font-size: 1rem;
+  }
+  p {
+    font-size: 1.2rem;
   }
 }/*# sourceMappingURL=style.css.map */
