--- a/owenbryce/stylesheets/style.css
+++ b/owenbryce/stylesheets/style.css
@@ -87,6 +87,13 @@ h5 {
   margin: 0;
 }
 
+h6 {
+  font-family: Serif-Light-Italic;
+  margin: 0;
+  font-size: 5rem;
+  text-underline-offset: 0.8rem;
+}
+
 ul {
   font-size: 1.8rem;
   font-family: Serif-Semibold-Italic;
@@ -166,6 +173,10 @@ section .content-wrapper .falling-image {
   width: 100%;
   overflow: hidden;
 }
+section .content-wrapper .sitting-image {
+  width: 100%;
+  min-width: 450px;
+}
 
 .live-performances {
   background: linear-gradient(205deg, rgb(255, 201, 147) 0%, rgb(140, 83, 54) 65%);
@@ -203,7 +214,7 @@ section .content-wrapper .falling-image {
 .footer {
   width: 100%;
   height: 1.5em;
-  background-color: rgb(47, 51, 36);
+  background-color: #c08f5d;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -235,6 +246,7 @@ section .content-wrapper .falling-image {
   section .content-wrapper .content-column {
     margin: 1rem !important;
     align-items: center !important;
+    flex-grow: 1 !important;
   }
   h1 {
     font-size: 4rem;
@@ -256,10 +268,18 @@ section .content-wrapper .falling-image {
   h5 {
     font-size: 1rem;
   }
+  h6 {
+    font-size: 3.5rem;
+  }
   i {
     font-size: 1rem;
   }
   p {
     font-size: 1.2rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  section .content-wrapper .sitting-image {
+    min-width: 0;
   }
 }/*# sourceMappingURL=style.css.map */
